crates/shell/src/shells/snapshots/starbase_shell__shells__fish__tests__formats_activate_hook.snap
---
source: crates/shell/src/shells/fish.rs
expression: "Fish.format_hook(Hook::Activate\n{\n    command: \"starbase hook fish\".into(), function: \"_starbase_hook\".into(),\n}).unwrap()"
---
function _starbase_hook;
  starbase hook fish | source
end;
