crates/shell/src/shells/snapshots/starbase_shell__shells__fish__tests__formats_cd_hook.snap
---
source: crates/shell/src/shells/fish.rs
expression: Fish.format_hook(hook).unwrap()
---
function _starbase_hook --on-variable PWD;
  starbase hook fish | source
end;
