crates/shell/src/shells/snapshots/starbase_shell__shells__fish__tests__formats_context_change_hook.snap
---
source: crates/shell/src/shells/fish.rs
expression: "Fish.format_hook(Hook::OnContextChange\n{ function: \"_starbase_hook\".into(), }).unwrap()"
---
# An event handler is part of a function definition, so the trigger calls the
# function rather than being attached to it
function _starbase_hook_on_context --on-variable PWD --on-event fish_prompt;
  _starbase_hook
end;
