crates/shell/src/shells/snapshots/starbase_shell__shells__fish__tests__formats_unregister_handlers_hook.snap
---
source: crates/shell/src/shells/fish.rs
expression: "Fish.format_hook(Hook::UnregisterHandlers\n{ function: \"_starbase_hook\".into(), }).unwrap()"
---
# Erasing the wrapper unbinds both events with it
functions --erase _starbase_hook_on_context;
